--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <h2> AI 실무</h2>
   <ul>
-    <li><a>하마와 곰 구별하기</a></li>
+    <li><a href="https://teachablemachine.withgoogle.com/models/fuN47a7ek/">사람과 인형 구분하기</a></li>
   </ul>
     
 </body>
