--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <h2> AI 실무</h2>
   <ul>
     <li><a href="https://teachablemachine.withgoogle.com/models/fuN47a7ek/">사람과 인형 구분하기</a></li>
+    <li><a href="/ImageModel_TM_copy_2022_05_17_08_51_44/index.html">사람과 인형 구분하기</a></li>
   </ul>
     
 </body>
