--- a/index.html
+++ b/index.html
@@ -7,10 +7,16 @@
     <title>나의 AI 프로젝트</title>
 </head>
 <body>
-  <h2> AI 실무</h2>
+  <h2> Teachable Machine</h2>
   <ul>
     <li><a href="https://teachablemachine.withgoogle.com/models/fuN47a7ek/">사람과 인형 구분하기</a></li>
     <li><a href="/ImageModel_TM_copy_2022_05_17_08_51_44/index.html">사람과 인형 구분하기</a></li>
+  </ul>
+    
+  <h2> Micro:bit</h2>
+  <ul>
+    <li><a href="https://makecode.microbit.org/_Dr6J09gAVezq">Practice01</a></li>
+    <li><a href="/ImageModel_TM_copy_2022_05_17_08_51_44/index.html"></a></li>
   </ul>
     
 </body>
