--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
   <h2> Teachable Machine</h2>
   <ul>
-    <li><a href="https://teachablemachine.withgoogle.com/models/fuN47a7ek/">사람과 인형 구분하기</a></li>
-    <li><a href="/ImageModel_TM_copy_2022_05_17_08_51_44/index.html">사람과 인형 구분하기</a></li>
+    <li><a href="https://teachablemachine.withgoogle.com/models/fuN47a7ek/">사람과 인형 구분하기-teachable machine</a></li>
+    <li><a href="/ImageModel_TM_copy_2022_05_17_08_51_44/index.html">사람과 인형 구분하기-downloaded</a></li>
   </ul>
     
   <h2> Micro:bit</h2>
   <ul>
-    <li><a href="https://makecode.microbit.org/_Dr6J09gAVezq">Practice01</a></li>
+    <li><a href="https://makecode.microbit.org/_Dr6J09gAVezq">Practice01 :) :( <3</a></li>
     <li><a href="/ImageModel_TM_copy_2022_05_17_08_51_44/index.html"></a></li>
   </ul>
     
