--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>나의 AI 프로젝트</title>
+    <title>홍서현의 AI 프로젝트</title>
 </head>
 <body>
+  <h2>홍서현의 AI 프로젝트</h2>
+  <hr>
   <h2> Teachable Machine</h2>
   <ul>
     <li><a href="https://teachablemachine.withgoogle.com/models/fuN47a7ek/">사람과 인형 구분하기-teachable machine</a></li>
