--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     
   <h2> Micro:bit</h2>
   <ul>
-    <li><a href="https://makecode.microbit.org/_Dr6J09gAVezq">Practice01 :) :( <3</a></li>
-    <li><a href="/ImageModel_TM_copy_2022_05_17_08_51_44/index.html"></a></li>
+    <li><a href="https://makecode.microbit.org/_Dr6J09gAVezq">Practice01- :) :( <3</a></li>
+    <li><a href="https://makecode.microbit.org/_dKMRM5WLTgpr">excersise01- score board</a></li>
   </ul>
     
 </body>
