--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <h2> Micro:bit</h2>
   <ul>
     <li><a href="https://makecode.microbit.org/_Dr6J09gAVezq">Practice01- :) :( <3</a></li>
-    <li><a href="https://makecode.microbit.org/_dKMRM5WLTgpr">excersise01- score board</a></li>
+    <li><a href="https://makecode.microbit.org/_dKMRM5WLTgpr">Exercise01- score board</a></li>
   </ul>
     
 </body>
