--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <hr>
   <h2> Teachable Machine</h2>
   <ul>
-    <li><a href="https://teachablemachine.withgoogle.com/models/fuN47a7ek/">사람과 인형 구분하기-teachable machine</a></li>
-    <li><a href="/ImageModel_TM_copy_2022_05_17_08_51_44/index.html">사람과 인형 구분하기-downloaded</a></li>
+    <li><a href="https://teachablemachine.withgoogle.com/models/fuN47a7ek/">Human or Doll-teachable machine</a></li>
+    <li><a href="/ImageModel_TM_copy_2022_05_17_08_51_44/index.html">Human or Doll-downloaded</a></li>
   </ul>
     
   <h2> Micro:bit</h2>
