--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
     <li><a href="https://makecode.microbit.org/_JbmU2vCvMfAK">Exercise07- Temp sender</a></li>
     <li><a href="https://makecode.microbit.org/_8pa3sqbTKFfd">Exercise07- Temp receiver</a></li>
 
-      
-   
+      <h3>아두이노 과제</h3>
+      <li><a href="/ArduinoProject/index.html</a></li>
      
   </ul>
 
