--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <li><a href="https://makecode.microbit.org/_8pa3sqbTKFfd">Exercise07- Temp receiver</a></li>
 
       <h2>아두이노 과제</h2>
-      <li><a href="/ArduinoProject/index.html>Web Report</a></li>
+      <li><a href="/ArduinoProject/index.html">Web Report</a></li>
      
   </ul>
 
