--- a/ArduinoProject/index.html
+++ b/ArduinoProject/index.html
@@ -324,6 +324,10 @@
                 <h3 class="section-subheading text-muted">웹 보고서 작성 코드</h3>
             </div>
             <h3>폴더 구성</h3>
+            <h3>초안</h3>
+            <img width="800" src=".\assets\img\oven.png">
+            <h3>디자인 변경 전</h3>
+            <img width="800" src=".\assets\img\before.png">
             <img width="800" src=".\assets\img\html5.PNG">
             <h3>HTML head</h3>
             <img width="800" src=".\assets\img\html1.PNG">
