--- a/ArduinoProject/index.html
+++ b/ArduinoProject/index.html
@@ -414,7 +414,20 @@
                 <tbody>
                     <tr>
                         <td>홍서현</td>
-                        <td><p class="text-muted">시험과 과제가 겹친다는 것이 이런 것인지 몰랐습니다. 아두이노 키트를 구매하지 않고 수업시간에 배운 것들 위주로 구성하여본 프로젝트라 다른 팀에 비해 난이도가 쉬워 보일 수 있다고 생각합니다. 처음에는 주제 선정을 너무 성급하게 한 것이 아닌가 걱정도 했지만, 막상 작업을 시작해보니 슬라이드 스위치나 DC 모터 같은 작은 추가적인 부품 하나를 추가하는 것도 프로그래밍하기에는 고난이었습니다. 코드를 짜기 위해서는 부품에 대해 이해하는 것이 우선이라는 점을 알게 되었습니다. 예로 들면 수업시간에 배운 서보모터는 360도 회전이 되지 않아 각도를 조절하였었는데 DC 모터는 HIGH만 되면 끝없이 회전합니다. 아두이노만의 전력 공급으로는 팬 정도의 무게도 회전시키기에 부족합니다. 슬라이드 스위치는 보통 전원 버튼으로 쓰여 HIGH, LOW로 코드를 짜는데 저희 팀처럼 모드 전환을 시키기 위해서는 if 문 실행코드 내부에서 DC 모터 함수를 실행시키는 생각의 전환이 필요하였습니다. 회로도와 코드를 완벽하게 짜놓고 실제 회로를 연결하기 시작하니 과정 중에 작동이 되지 않아도 잘못 꽂은 핀이 있는지, 부품이 정상 작동하는 것인지만 확인하면 되어서 편했습니다. 무작정 시작했던 HTML 코드가 길어지니 CSS로 스타일을 주는 것이 너무 어려웠습니다. 왜 적은 대로 실행이 안 되는지 이해할 수가 없었습니다. 웹 보고서라 세로로 길게 읽을 수 있는 긴 형식으로 만들고 싶었습니다. 편의를 위해서는 네비게이션 바에서 id 값으로 이동할 수 있게 만드는 것이 필수적이라 열심히 만들었던 코드를 다 엎기로 하였습니다. 마음을 비우고 다시 header, body, footer로 나뉜 코드를 다시 세부적으로 section 별로 정리하게 되었습니다. 나름 오븐을 이용해 프론트를 계획적으로 작성했다고 생각했었는데, 이러한 과정을 겪으며 훨씬 더 세부적인 계획을 세워야 했음을 깨달았습니다. 조장으로서 부족한 점이 많아 수줍음이 많은 조원을 끌고 가는 것이 어려웠습니다. 조별 과제인 만큼 더 크고 대단한 프로젝트를 하고 싶었지만, 조원들의 의지가 부족한 것 같아 불평이 생기기도 했었습니다. 생각을 바꿔 동기부여를 주려고 노력하니 잘 따라와 주어 끝까지 힘을 내서 마무리할 수 있었습니다. 공부 외에도 배운 점이 많은 과제였습니다.
+                        <td><p class="text-muted">시험과 과제가 겹친다는 것이 이런 것인지 몰랐습니다.<br> 
+                             아두이노 키트를 구매하지 않고 수업시간에 배운 것들 위주로 구성하여본 프로젝트라 다른 팀에 비해 난이도가 쉬워 보일 수 있다고 생각합니다. <br>
+                             처음에는 주제 선정을 너무 성급하게 한 것이 아닌가 걱정도 했지만, 막상 작업을 시작해보니 슬라이드 스위치나 DC 모터 같은 작은 추가적인 부품 하나를 추가하는 것도 프로그래밍하기에는 고난이었습니다.<br><br>
+                             코드를 짜기 위해서는 부품에 대해 이해하는 것이 우선이라는 점을 알게 되었습니다. <br>
+                             예로 들면 수업시간에 배운 서보모터는 360도 회전이 되지 않아 각도를 조절하였었는데 DC 모터는 HIGH만 되면 끝없이 회전합니다. 아두이노만의 전력 공급으로는 팬 정도의 무게도 회전시키기에 부족합니다. 
+                             슬라이드 스위치는 보통 전원 버튼으로 쓰여 HIGH, LOW로 코드를 짜는데 저희 팀처럼 모드 전환을 시키기 위해서는 if 문 실행코드 내부에서 DC 모터 함수를 실행시키는 생각의 전환이 필요하였습니다.
+                              <br>회로도와 코드를 완벽하게 짜놓고 실제 회로를 연결하기 시작하니 과정 중에 작동이 되지 않아도 잘못 꽂은 핀이 있는지, 부품이 정상 작동하는 것인지만 확인하면 되어서 편했습니다. <br><br>
+                              무작정 시작했던 HTML 코드가 길어지니 CSS로 스타일을 주는 것이 너무 어려웠습니다. 왜 적은 대로 실행이 안 되는지 이해할 수가 없었습니다. <br>
+                              웹 보고서라 세로로 길게 읽을 수 있는 긴 형식으로 만들고 싶었습니다. 편의를 위해서는 네비게이션 바에서 id 값으로 이동할 수 있게 만드는 것이 필수적이라 열심히 만들었던 코드를 다 엎기로 하였습니다. <br>
+                              마음을 비우고 다시 header, body, footer로 나뉜 코드를 다시 세부적으로 section 별로 정리하게 되었습니다. <br>
+                              나름 오븐을 이용해 프론트를 계획적으로 작성했다고 생각했었는데, 이러한 과정을 겪으며 훨씬 더 세부적인 계획을 세워야 했음을<br> 깨달았습니다.<br><br> 
+                              조장으로서 부족한 점이 많아 수줍음이 많은 조원을 끌고 가는 것이 어려웠습니다. <br>조별 과제인 만큼 더 크고 대단한 프로젝트를 하고 싶었지만, 
+                              조원들의 의지가 부족한 것 같아 불평이 생기기도 했었습니다.<br> 생각을 바꿔 동기부여를 주려고 노력하니 잘 따라와 주어 끝까지 힘을 내서 마무리할 수 있었습니다.<br>
+                               공부 외에도 배운 점이 많은 과제였습니다.
                         </p></td>
                     </tr>
                     <tr>
