--- a/ArduinoProject/index.html
+++ b/ArduinoProject/index.html
@@ -596,9 +596,8 @@
                                 <!-- Project details-->
                                 <h2 class="text-uppercase">온습도 모듈</h2>
                                 <img class="img-fluid d-block mx-auto" src="assets/conn/dht11.png" alt="..." />
-                                <p>습도는 공기 중에 수증기가 포함된 정도로써 실생활에서는 상대 습도로 쓰입니다. 
-                                    온도라는 것은 원자 또는 분자가 가지고 있는 운동에너지의 크기를 말하며, 압력, 저항등의 물리량으로 변환하여 나타냅니다.
-                                    온도는 따뜻함과 차가움을 구별하는 수치이고 온습도 센서는 주변의 온도를 측정합니다.</p>
+                                <p>온도 센서 : 온도에 따라서 물질의 저항 값이 변하는 소재를 이용해서 저항 값의 변화를 감지해서 온도를 측정<br>
+                                습도센서 : 전극이 연결 된 얇은 판의 표면에 부착되는 공기중의 수분 양에 따라 변하는 전극의 전도도를 감지하여 측정</p>
                                 <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal"
                                     type="button">
                                     <i class="fas fa-xmark me-1"></i>
