--- a/ArduinoProject/index.html
+++ b/ArduinoProject/index.html
@@ -281,7 +281,7 @@
                 <h2 class="section-heading text-uppercase">Tinkercad Connection</h2>
                 <h3 class="section-subheading text-muted">아두이노 전체 회로 실물 사진</h3>
             </div>
-            <img src=".\assets\img\ard_conn.png"/>
+            <img src=".\assets\img\img.jpg"/>
     </section>
     <!-- codes -->
     <section class="page-section bg-light" id="codes">
